--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		
 		<div id="root"></div>
 
-		<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-		<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+		<script type="text/javascript" src="react.development.js"></script>
+		<script type="text/javascript" src="react-dom.development.js"></script>
 		<script type="text/javascript" src="Cell.js"></script>
 		<script type="text/javascript" src="Board.js"></script>
 		<script type="text/javascript" src="main.js"></script>
