--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang = 'en'>
 	<head>
-		<title>board</title>
+		<title>board_games_constructor</title>
 		<meta charset = 'utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
