--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script type="text/javascript" src="react-dom.development.js"></script>
 		<script type="text/javascript" src="Cell.js"></script>
 		<script type="text/javascript" src="Board.js"></script>
-		<script type="text/javascript" src="default_config.js"></script>
+		<script type="text/javascript" src="config/intellector_config.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
