embed figures images in config (by links)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body id = 'body' leftmargin = "0" topmargin = "0">
 		
+		<div id="editor_holder"></div>
 		<div id="root"></div>
 
 		<script type="text/javascript" src="react.development.js"></script>
