--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<div id="editor_holder"></div>
 		<div id="root"></div>
 
+		<script type="text/javascript" src="upload_download.js"></script>
+
 		<script type="text/javascript" src="react.development.js"></script>
 		<script type="text/javascript" src="react-dom.development.js"></script>
 		<script type="text/javascript" src="Cell.js"></script>
