--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div id="root"></div>
 
 		<script type="text/javascript" src="upload_download.js"></script>
+		<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 
 		<script type="text/javascript" src="react.development.js"></script>
 		<script type="text/javascript" src="react-dom.development.js"></script>
