--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div id="root"></div>
 
 		<script type="text/javascript" src="upload_download.js"></script>
+		<script type="text/javascript" src="game.js"></script>
 
 		<script type="text/javascript" src="react.development.js"></script>
 		<script type="text/javascript" src="react-dom.development.js"></script>
