decouple expansion points from class 'Game' to object 'library'; decouple function for working with board to 'board_functions.js'

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<div id="root"></div>
 
 		<script type="text/javascript" src="upload_download.js"></script>
+
+		<script type="text/javascript" src="board_functions.js"></script>
+		<script type="text/javascript" src="library.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 
 		<script type="text/javascript" src="react.development.js"></script>
