moved from react to preact

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 		<script type="text/javascript" src="library.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 
-		<script type="text/javascript" src="react.development.js"></script>
-		<script type="text/javascript" src="react-dom.development.js"></script>
+		<script src="preact.min.js"></script>
 		<script type="text/javascript" src="Cell.js"></script>
 		<script type="text/javascript" src="Board.js"></script>
 		<script type="text/javascript" src="main.js"></script>
